# reduction

./: CMakeLists.txt  README.md
include/: elemenst.hpp  fileprocessing.hpp  redmatrices.hpp  reductionsubnet.hpp  subnets.hpp
src/: elements.cpp  fileprcessing.cpp  main.cpp  reductionsubnet.cpp  subnets.cpp
